test/conformance/kuttl/generate/clusterpolicy/standard/data/nosync/cpol-foreach-data-nosync/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - create-pod.yaml
assert:
  - generated-secret.yaml
