test/conformance/kuttl/generate/clusterpolicy/standard/data/nosync/cpol-foreach-data-nosync/cluster-policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-foreach-data-nosync
  namespace: default
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
