test/conformance/kuttl/generate/clusterpolicy/standard/data/nosync/cpol-foreach-data-nosync/manifest.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-foreach-data-sync
  namespace: default
spec:
  rules:
  - name: cpol-foreach-data-sync-secret
    match:
      any:
      - resources:
          kinds:
          - pod
    generate:
      foreach:
      - list: "request.object.spec.containers"
        generateResources:
        - kind: Secret
          apiVersion: v1
          name: "newsecret"
          namespace: "default"
          synchronize: false
          data:
            foo: YmFy
